# alx-zoning-illegal-homes

./: README.md  main.py  pyproject.toml
alx_zoning_illegal_homes/downloader/: download.py  files.json
alx_zoning_illegal_homes/mapper/: loader.py  main.py
downloader/: download.py  files.json
