[tool.poetry]
name = "alx-zoning-illegal-homes"
version = "0.1.0"
description = ""
authors = ["Tom VanAntwerp <tom@tomvanantwerp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
