[tool.poetry]
name = "alx-zoning-illegal-homes"
version = "0.1.0"
description = ""
authors = ["Tom VanAntwerp <tom@tomvanantwerp.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create-map = "main:main"

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^0.13.2"
requests = "^2.31.0"
