[tool.poetry]
name = "alx-zoning-illegal-homes"
version = "0.1.0"
description = ""
authors = ["Tom VanAntwerp <tom@tomvanantwerp.com>"]
readme = "README.md"
repository = "https://github.com/tvanantwerp/alx-zoning-illegal-homes"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create-map = "alx_zoning_illegal_homes.mapper.main:main"

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^0.13.2"
requests = "^2.31.0"
